bot bar in segmented control

--- a/AutoLayoutDemo/Base.lproj/Main.storyboard
+++ b/AutoLayoutDemo/Base.lproj/Main.storyboard
@@ -376,13 +376,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i6y-kc-KZ6">
                                 <rect key="frame" x="0.0" y="72" width="375" height="595"/>
                                 <connections>
-                                    <segue destination="vfF-X0-KaW" kind="embed" id="fLW-a0-8ry"/>
-                                </connections>
-                            </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S0L-Ek-ei6">
-                                <rect key="frame" x="0.0" y="72" width="375" height="595"/>
-                                <connections>
-                                    <segue destination="lhQ-X0-tkN" kind="embed" id="xKU-Un-zKo"/>
+                                    <segue destination="7wm-5D-Lkk" kind="embed" id="wKY-ig-vzu"/>
                                 </connections>
                             </containerView>
                         </subviews>
@@ -391,15 +385,11 @@
                             <constraint firstItem="o7h-Fx-xHz" firstAttribute="top" secondItem="3wR-Q8-qxS" secondAttribute="top" constant="16" id="429-55-rYI"/>
                             <constraint firstItem="3wR-Q8-qxS" firstAttribute="bottom" secondItem="i6y-kc-KZ6" secondAttribute="bottom" id="8aV-Tj-PAQ"/>
                             <constraint firstItem="i6y-kc-KZ6" firstAttribute="leading" secondItem="3wR-Q8-qxS" secondAttribute="leading" id="CUT-Rl-VLZ"/>
-                            <constraint firstItem="S0L-Ek-ei6" firstAttribute="leading" secondItem="3wR-Q8-qxS" secondAttribute="leading" id="GbP-00-7ty"/>
                             <constraint firstItem="3wR-Q8-qxS" firstAttribute="bottom" secondItem="Gff-FP-yu9" secondAttribute="bottom" id="Nid-Uf-gXt"/>
                             <constraint firstItem="3wR-Q8-qxS" firstAttribute="trailing" secondItem="Gff-FP-yu9" secondAttribute="trailing" id="VnB-aD-EoD"/>
                             <constraint firstItem="o7h-Fx-xHz" firstAttribute="leading" secondItem="3wR-Q8-qxS" secondAttribute="leading" constant="16" id="WUb-Ma-5Ga"/>
-                            <constraint firstItem="3wR-Q8-qxS" firstAttribute="bottom" secondItem="S0L-Ek-ei6" secondAttribute="bottom" id="f1l-0R-dLm"/>
                             <constraint firstItem="i6y-kc-KZ6" firstAttribute="trailing" secondItem="3wR-Q8-qxS" secondAttribute="trailing" id="gk9-9X-BVi"/>
-                            <constraint firstItem="3wR-Q8-qxS" firstAttribute="trailing" secondItem="S0L-Ek-ei6" secondAttribute="trailing" id="kh4-nq-PFM"/>
                             <constraint firstItem="3wR-Q8-qxS" firstAttribute="trailing" secondItem="o7h-Fx-xHz" secondAttribute="trailing" constant="16" id="loD-5C-xtk"/>
-                            <constraint firstItem="S0L-Ek-ei6" firstAttribute="top" secondItem="o7h-Fx-xHz" secondAttribute="bottom" constant="8" id="oN8-xC-ONA"/>
                             <constraint firstItem="i6y-kc-KZ6" firstAttribute="top" secondItem="o7h-Fx-xHz" secondAttribute="bottom" constant="8" id="r5V-ni-jZ2"/>
                             <constraint firstItem="Gff-FP-yu9" firstAttribute="top" secondItem="o7h-Fx-xHz" secondAttribute="bottom" constant="8" id="vFB-Xt-cQE"/>
                             <constraint firstItem="Gff-FP-yu9" firstAttribute="leading" secondItem="3wR-Q8-qxS" secondAttribute="leading" id="yIf-gq-Kwx"/>
@@ -444,6 +434,56 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AqQ-tk-e5Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1664" y="-814"/>
+        </scene>
+        <!--Fundamental-->
+        <scene sceneID="uAS-tN-21Q">
+            <objects>
+                <viewController id="epR-Mu-nrf" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ED1-eV-3K7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="595"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Usc-uB-1HF"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Fundamental" id="Ifq-QP-Aw4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VVg-9K-rY8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="964" y="715"/>
+        </scene>
+        <!--SBD-->
+        <scene sceneID="f1K-g5-gVg">
+            <objects>
+                <viewController id="yXN-Sp-IwT" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qv8-jc-t9r">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="595"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="3vs-gN-CLt"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="SBD" id="6Tm-Rl-Nb3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WoH-Qd-sGy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="964" y="-152"/>
+        </scene>
+        <!--Scorecard Tab Bar View Controller-->
+        <scene sceneID="Vdo-xA-8Gs">
+            <objects>
+                <tabBarController id="7wm-5D-Lkk" customClass="ScorecardTabBarViewController" customModule="AutoLayoutDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="V7A-aR-FHS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="yXN-Sp-IwT" kind="relationship" relationship="viewControllers" id="2li-ci-mM8"/>
+                        <segue destination="epR-Mu-nrf" kind="relationship" relationship="viewControllers" id="H3G-DD-Rml"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eo1-zL-pRQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="231" y="382"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="PrP-Lg-fJz">
@@ -574,36 +614,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xhd-g8-LH6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-606" y="376"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="wrb-SY-LHR">
-            <objects>
-                <viewController id="vfF-X0-KaW" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="M0a-s2-ROy">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="595"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.79357593910000002" green="0.3265949548" blue="0.3874313304" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="rPL-hP-eDm"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ppq-9c-ShG" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="399" y="376"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="3HX-yn-799">
-            <objects>
-                <viewController id="lhQ-X0-tkN" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="aZU-XP-OlO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="595"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="gwu-dN-Nlw"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x4G-E1-gS9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1086" y="-65"/>
         </scene>
     </scenes>
     <resources>
